fixed calendar grid alignement using grid instead of flexbox

--- a/FrontEnd/mementomori/src/components/CalendarFields.css
+++ b/FrontEnd/mementomori/src/components/CalendarFields.css
@@ -2,8 +2,6 @@
 
 .cube {
     float: left;
-    width: 19px;
-    height: 19px;
     border: 1px solid rgba(0, 0, 0, .2);
     margin: 1px;
   }
@@ -14,8 +12,6 @@
 
   .cube-lived{
     float: left;
-    width: 19px;
-    height: 19px;
     border: 1px solid rgba(0, 0, 0, .2);
     margin: 1px;
     background-color: rgba(6,30,57);
